Anti-Bloat: Fix, this replacement lead to a SyntaxError.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1842,7 +1842,7 @@
   anti-bloat:
     - description: 'remove IPython reference'
       replacements_plain:
-        'get_ipython()': 'raise NameError'
+        'ip = get_ipython()': 'raise NameError'
       when: 'not use_ipython'
 
 - module-name: 'scipy._lib'
