Standalone: Added support for "llvmlite.binding" package.
* This makes a lot of other package capable of being imported,
  e.g. "shap", but it's unclear how much of a help this really
  is to run them.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -688,6 +688,13 @@
         '__IPYTHON__': 'raise NameError'
       when: 'not use_ipython'
 
+- module-name: 'llvmlite.binding.ffi'
+  dlls:
+    - from_filenames:
+        prefixes:
+          - 'llvmlite'
+          - 'libllvmlite'
+
 - module-name: 'lxml'
   implicit-imports:
     - depends:
