--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -137,6 +137,7 @@
         "finalizer",
         "FLUFL",
         "frozenset",
+        "fstrings",
         "getpreferredencoding",
         "girepository",
         "Gitter",
