Visual Code: Added extension for Debian packaging files

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -13,6 +13,7 @@
         "stkb.rewrap",
         "trond-snekvik.simple-rst",
         "redhat.vscode-yaml",
+        "dawidd6.debian-vscode",
         "streetsidesoftware.code-spell-checker",
         "samuelcolvin.jinjahtml"
     ],
