Standalone: Added dependencies from "orjson" from stdlib as well.
* These show only with "--follow-stdlib" which at least for this works now.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1072,6 +1072,8 @@
   implicit-imports:
     - depends:
         - 'zoneinfo'
+        - 'json'
+        - 'uuid'
 
 - module-name: 'osgeo'
   data-files:
