--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1981,13 +1981,13 @@
     - by_code:
         setup_code: 'import shapely.geos'
         filename_code: 'shapely.geos._lgeos._name'
-      when: 'not anaconda and not win32'
+      when: 'not anaconda and not win32 and version("shapely") < (1,8,1)'
     # Anaconda or Win32 are forced to specific path.
     - by_code:
         setup_code: 'import shapely.geos, os'
         filename_code: 'shapely.geos._lgeos._name'
       dest_path: 'shapely'
-      when: 'anaconda or win32'
+      when: 'anaconda or win32 and version("shapely") < (1,8,1)'
   anti-bloat:
     - description: 'change geos DLL location'
       replacements_plain:
