Debian: Do not depend on python-glob2 on old versions
* We have the inline copies on these.

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Build-Depends: debhelper (>= 9),
                base-files (>= 11) | python-setuptools,
                base-files (>= 11) | python-jinja2,
                base-files (>= 11) | python-yaml,
-               base-files (>= 11) | python-glob2,
+               base-files (>= 11) | base-files (<< 9.10) | python-glob2,
                scons,
                python3-all-dev (>= 3.3),
                python3-all-dbg (>= 3.3),
@@ -21,6 +21,7 @@ Build-Depends: debhelper (>= 9),
                zlib1g-dev,
                base-files (>= 11) | python-appdirs,
                python3-appdirs | base-files (<< 7.2),
+               python3-glob2 | base-files (<< 9.10),
                rst2pdf,
                fontconfig,
                base-files (>= 11) | python-pil | python-imaging,
@@ -44,11 +45,11 @@ Depends: gcc (>= 5.0) | g++ (>= 4.4) | clang (>= 3.0),
          scons (>= 2.0.0),
          python3-jinja2,
          python3-appdirs | base-files (<< 7.2),
-         python3-glob2 | base-files (<= 9),
+         python3-glob2 | base-files (<< 9.10),
          python3-dev,
          base-files (>= 11) | python-jinja2,
          base-files (>= 11) | python-yaml,
-         base-files (>= 11) | python-glob2,
+         base-files (>= 11) | base-files (<< 9.10) | python-glob2,
          zlib1g-dev,
          libzstd-dev | base-files (<= 9),
          ccache,
