--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -130,6 +130,7 @@
         "distutils",
         "Doxygen",
         "dpkg",
+        "dunder",
         "DYLD",
         "dylib",
         "elif",
