--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -144,6 +144,7 @@
         "getpreferredencoding",
         "girepository",
         "Gitter",
+        "hasattr",
         "hashable",
         "Hayen",
         "HEDLEY",
@@ -161,6 +162,7 @@
         "ipython",
         "isdir",
         "isfile",
+        "isgen",
         "isgenerator",
         "isort",
         "iterdir",
@@ -172,6 +174,7 @@
         "Kivy",
         "kwargs",
         "kwds",
+        "lasti",
         "ldconfig",
         "libc",
         "libpython",
@@ -217,6 +220,7 @@
         "Py_XDECREF",
         "Py_XINCREF",
         "PYCORE",
+        "PyCoro_Type",
         "pyenv",
         "PyErr_WriteUnraisable",
         "pygsheets",
