--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -681,6 +681,12 @@
       - 'fonts'
       - 'images'
 
+- module-name: 'lightgbm.libpath'
+  dlls:
+    - from_filenames:
+        prefixes:
+          - 'lib_lightgbm'
+
 - module-name: 'llvmlite.binding.analysis'
   anti-bloat:
     - description: 'remove IPython reference'
