Plugins: Pass build definitions generically and added interface
* With this, so called build definitions can be provided by
  plugins, and scons code no longer has to also know environment
  variables, instead they are passed generically.

* Also make spec checking externally usable, so plugins can
  access it.

* Also cleanup onefile code that deals with files to provide
  a generic interface for use in plugins.

* Fix zstd and file flags related warnings with mingw64 debug
  mode, the later is actually also an optimization, since on
  Windows that value is unused.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -130,7 +130,6 @@
         "distutils",
         "Doxygen",
         "dpkg",
-        "dunder",
         "dtruss",
         "dunder",
         "DYLD",
@@ -292,6 +291,7 @@
         "visitproc",
         "vmprof",
         "wargv",
+        "wcsicmp",
         "winlibs",
         "wmain",
         "zstandard",
