--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -191,6 +191,7 @@
         "nosite",
         "nowarn",
         "Nuitka",
+        "numberize",
         "numpy",
         "ob_sval",
         "olddiv",
