Standalone: Added data files for "vedo" package

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -3145,6 +3145,11 @@
     - depends:
         - 'uvloop._noop'
 
+- module-name: 'vedo'
+  data-files:
+    dirs:
+      - 'fonts'
+
 - module-name: 'vibora'
   anti-bloat:
     - description: 'remove test code'
