Python3.11: Follow change in unbound local error message
* Use an automatic template for this error too, so partly this is
  automatically detected in the future.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,6 +104,7 @@
         "clangcl",
         "clcache",
         "CLONG",
+        "clonglong",
         "closefd",
         "co_argcount",
         "co_firstlineno",
@@ -141,6 +142,7 @@
         "frozenset",
         "fstrings",
         "getpreferredencoding",
+        "gettotalrefcount",
         "girepository",
         "Gitter",
         "hasattr",
@@ -178,6 +180,7 @@
         "libc",
         "libpython",
         "lldb",
+        "longlong",
         "LPWSTR",
         "lxml",
         "Matmult",
