Python3.11: Follow more core changes
* Dictionary iteration needs to be changed as well to consider
  difference for string only dictionaries.

* Generator frames are now working too.

* Allocator for compiled frames needs a trick now that the base
  uncompiled frames are static size, but we remain variable size with
  the compiled ones.

* Added experimental flag to enable frame debugging and get it to
  work again.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,7 @@
         "CBOOL",
         "ccache",
         "CFLOAT",
+        "cframe",
         "clangcl",
         "clcache",
         "CLONG",
@@ -218,6 +219,7 @@
         "POSIX",
         "Py_DECREF",
         "Py_INCREF",
+        "Py_REFCNT",
         "Py_ssize_t",
         "Py_TPFLAGS",
         "Py_XDECREF",
@@ -279,6 +281,7 @@
         "traverseproc",
         "truediv",
         "tshape",
+        "tstate",
         "ucrt",
         "uncompiled",
         "unoptimized",
