Standalone: Fix, "pyarrow" package" was causing corruption with MSVC
* This is much like the scipy 1.8 issue, the problematic code is yet
  another copy.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1566,6 +1566,15 @@
         'from ._common import SUNOS': "'SUNOS = %r' % psutil.SUNOS"
         'from ._common import WINDOWS': "'WINDOWS = %r' % psutil.WINDOWS"
 
+- module-name: 'pyarrow.vendored.docscrape'
+  anti-bloat:
+    - description: 'remove sphinx reference'
+      replacements_plain:
+        "if 'sphinx' in sys.modules:": 'if False:'
+    - description: 'workaround for MSVC bug with scipy 1.8.x '
+      replacements_plain:
+        "return l2.startswith('-'*len(l1)) or l2.startswith('='*len(l1))": "r = l2.startswith('-'*len(l1)) or l2.startswith('='*len(l1)); return r"
+
 - module-name: 'pycparser.c_parser'
   implicit-imports:
     - depends:
