Quality: Detect trailing/leading spaces in Yaml "description" values

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1571,7 +1571,7 @@
     - description: 'remove sphinx reference'
       replacements_plain:
         "if 'sphinx' in sys.modules:": 'if False:'
-    - description: 'workaround for MSVC bug with scipy 1.8.x '
+    - description: 'workaround for MSVC bug with scipy docscrape 1.8.x'
       replacements_plain:
         "return l2.startswith('-'*len(l1)) or l2.startswith('='*len(l1))": "r = l2.startswith('-'*len(l1)) or l2.startswith('='*len(l1)); return r"
 
@@ -1971,7 +1971,7 @@
     - description: 'remove sphinx reference'
       replacements_plain:
         "if 'sphinx' in sys.modules:": 'if False:'
-    - description: 'workaround for MSVC bug with scipy 1.8.x '
+    - description: 'workaround for MSVC bug with scipy 1.8.x'
       replacements_plain:
         "return l2.startswith('-'*len(l1)) or l2.startswith('='*len(l1))": "r = l2.startswith('-'*len(l1)) or l2.startswith('='*len(l1)); return r"
 
@@ -2053,7 +2053,7 @@
       replacements_plain:
         "if 'sphinx' in sys.modules:": 'if False:'
     # TODO: Keep the same as 'scipy._lib._docscrape' module
-    - description: 'workaround for MSVC bug with scipy 1.8.x '
+    - description: 'workaround for MSVC bug with scipy docscrape 1.8.x'
       replacements_plain:
         "return l2.startswith('-'*len(l1)) or l2.startswith('='*len(l1))": "r = l2.startswith('-'*len(l1)) or l2.startswith('='*len(l1)); return r"
 
