macOS: Annotate module "Foundation" that will require bundle mode

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -426,6 +426,13 @@
     dirs:
       - 'templates'
 
+- module-name: 'Foundation'
+  options:
+    checks:
+      - description: "The 'Foundation' module requires bundle module"
+        macos_bundle: 'yes'
+        when: 'macos'
+
 - module-name: 'frozendict'
   data-files:
     patterns:
