--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1002,6 +1002,24 @@
         'import numexpr.tests': 'raise ImportError'
 
 - module-name: 'numpy'
+  dlls:
+    - from_filenames:
+        relative_path: '.libs'
+        prefixes:
+          - 'lib'
+      when: 'win32'
+    - by_code:
+        setup_code: |
+          import os, sys
+          library_path = os.path.join("Library", "bin") if os.name == "nt" else "lib"
+          library_prefix = "mkl_" if os.name == "nt" else "libmkl_"
+        filename_code: |
+          [os.path.join(sys.prefix, library_path, filename)
+           for filename in os.listdir(os.path.join(sys.prefix, library_path))
+           if filename.startswith(library_prefix)]
+      dest_path: '.'
+      when: 'anaconda'
+
   implicit-imports:
     - depends:
         - 'numpy._mklinit'
@@ -2009,6 +2027,18 @@
       replacements_plain:
         'ip = get_ipython()': 'raise NameError'
       when: 'not use_ipython'
+
+- module-name: 'scipy'
+  dlls:
+    - from_filenames:
+        relative_path: '.libs'
+        prefixes:
+          - ''
+    - from_filenames:
+        relative_path: 'extra_dll'
+        prefixes:
+          - ''
+      when: 'win32'
 
 - module-name: 'scipy._distributor_init'
   anti-bloat:
