UI: Handle package data files from user immediately
* This removes the matching of package names, seems too much and
  makes it hard for plugins to know these files during compilation.

* Also match directories without a need for a "/*" in the end by
  giving exact name.

* This allows to detect non-successful "--include-package-data"
  usage soon and at all.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -122,6 +122,7 @@
         "CO_VARKEYWORDS",
         "co_varnames",
         "codesign",
+        "codespell",
         "compactify",
         "conda",
         "CORO_CLOSED",
