User Manual: Added information about macOS entitlements and Windows console

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -246,6 +246,7 @@
         "PYTHONHOME",
         "PYTHONIOENCODING",
         "PYTHONPATH",
+        "pythonw",
         "Qualname",
         "redist",
         "reexecute",
