Standalone: Added data file for "lark" package.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -755,6 +755,11 @@
       - 'fonts'
       - 'images'
 
+- module-name: 'lark'
+  data-files:
+    dirs:
+      - 'grammars'
+
 - module-name: 'lightgbm.libpath'
   dlls:
     - from_filenames:
