Python3.11: Ignore caret ranges in test outputs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -136,6 +136,7 @@
         "Dejong",
         "descrgetfunc",
         "devel",
+        "diffable",
         "distutils",
         "Doxygen",
         "dpkg",
